2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-control.c:
	* bonobo/bonobo-selector-widget.c: (bonobo_selector_widget_init):
	* bonobo/bonobo-ui-private.h:
	* bonobo/bonobo-ui-sync-toolbar.c:
	(impl_bonobo_ui_sync_toolbar_state):
	* samples/compound-doc/bonobo-hello/hello-view.c: (view_new):
	* tools/browser/component-details.c: (component_details_init),
	(component_details_get_info):
	A bunch of cleanups:
	- Don't use C++ type comments
	- Pass NULL to gtk_label_new() to save some work.

2006-12-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* bonobo/bonobo-ui-init-gtk.c: Add missing #include <popt.h>.

2006-12-10  P. Henrique Silva  <ph.silva@gmail.com>

	reviewed by: Gustavo Carneiro

	* bonobo/bonobo-canvas-item.c (gbi_update, gbi_realize),
	(gbi_unrealize, gbi_finalize, bonobo_canvas_item_init):
	* bonobo/bonobo-dock-band.c (bonobo_dock_band_init),
	(bonobo_dock_band_map, bonobo_dock_band_unmap),
	(bonobo_dock_band_finalize):
	* bonobo/bonobo-dock-item-grip.c (bonobo_dock_item_grip_init),
	(bonobo_dock_item_grip_key_press_event),
	(bonobo_dock_item_grip_class_init):
	* bonobo/bonobo-dock-item.c (bonobo_dock_item_init),
	(bonobo_dock_item_finalize, bonobo_dock_item_unrealize),
	(bonobo_dock_item_float_window_expose, bonobo_dock_item_expose),
	(bonobo_dock_item_add, bonobo_dock_item_remove):
	* bonobo/bonobo-dock.c (bonobo_dock_init, bonobo_dock_map),
	(bonobo_dock_unmap, bonobo_dock_finalize):
	* bonobo/bonobo-plug.c (bonobo_plug_realize),
	(bonobo_plug_unrealize, bonobo_plug_map, bonobo_plug_dispose),
	(bonobo_plug_finalize, bonobo_plug_size_allocate),
	(bonobo_plug_size_request, bonobo_plug_expose_event),
	(bonobo_plug_init):
	* bonobo/bonobo-selector-widget.c:
	(bonobo_selector_widget_finalize, bonobo_selector_widget_init):
	* bonobo/bonobo-selector.c (bonobo_selector_finalize),
	(bonobo_selector_init):
	* bonobo/bonobo-socket.c (bonobo_socket_finalize),
	(bonobo_socket_dispose, bonobo_socket_realize),